--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@mayanfinance/swap-sdk": "^11.4.0",
     "@prisma/client": "^6.19.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@solana/web3.js": "^1.98.4",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bip39": "^3.1.0",
     "class-variance-authority": "^0.7.1",
@@ -26,6 +30,7 @@
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "qr-code-styling": "^1.9.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
